styles.css
:root {
  --wll-primary: black;

  --wll-bg: white;
  --wll-bg-second: oklch(95% 0 0);
}

body {
  background-color: var(--wll-bg-second);

  font-family: monospace;

  margin: 0;
  padding: 0;
}


.box {
  margin: 2rem;
  padding: 2rem;

  background-color: var(--wll-bg);
  border-radius: 5px;
  box-shadow: 0 0 10px oklch(0% 0 0 / 10%);
}

/* Specific */

.dual {
  display: flex;
}

#transaction-history {
  width: 50%;

  table tr {
    font-size: 1.2rem;
    line-height: 1rem;

    td {
      padding: .2rem .6rem;

      &.action {
        font-size: 2rem;

        &.deposit {
          color: green
        }

        &.withdrawal {
          color: red;
        }
      }

      &.amount {
        text-align: right;
      }

      &.user {
        font-style: italic;
      }
    }
  }
}

#additional-info {
  width: 50%;

  #balance {
    .total {
      font-size: 1.5rem;
    }

    .members {
      h2 {
        font-size: 1.5rem;
      }

      table tr {
        font-size: 1.2rem;
        line-height: 1rem;

        &[data-username="Bank Interest"] {
          td.user {
            color: oklch(80% 0 0);
          }
        }

        td {
          padding: .2rem .6rem;

          &.user {
            font-style: italic;
          }

          &.common-balance {
            text-align: right;

            &.negative {
              color: red;
            }
          }
        }
      }
    }
  }
}

#technical-infos {
  #drift {
    span {
      &.important {
        font-weight: 800;
        color: red;
      }
    }
  }

  #websocket-info {
    span {
      &.connected {
        color: green;
      }

      &.disconnected {
        color: red;
      }
    }
  }
}

